Fix new frame alignment on ILR employee profile page headers

--- a/web/themes/custom/union_marketing/scss/components/_profile.scss
+++ b/web/themes/custom/union_marketing/scss/components/_profile.scss
@@ -23,6 +23,7 @@
   .profile__banner {
     display: grid;
     grid-template-columns: 1fr;
+    align-items: start;
     column-gap: var(--cu-ps1);
 
     @include breakpoint(md) {
